kbase/components/traefik/traefik-ingressroute.yaml
#! Instead of using the helm values (which cannot be made host-specific), define the IngressRoute manually so it can be kustomized
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-37.0.0
  name: traefik-dashboard
spec:
  entryPoints:
  - websecure
#! Use an invalid default to force kustomization in clusters
#  routes:
#  - kind: Rule
#    match: Host(`HasToBeSpecifiedInCluster`)
#    services:
#    - kind: TraefikService
#      name: api@internal
  tls:
    certResolver: letsencrypt-dns
